Change log for Bos Wars
-----------------------

Development version:
- Display the Bos Wars logo image by default instead of the video 
  (Sébastien Kerguen, Francois Beerten)
- Add missing const specifiers to fix compilation with 
  GCC 4.2 (Loïs Taulelle, Forjan Frederic)
- Fix compilation error in focushandler.cpp (Francois Beerten)
- Fixed attack range off by 1 bug (Jimmy Salmon)
- Updated nuclear missile graphic (TimberDragon)
- Added guerilla map (TimberDragon)
- Added random-frame to animations (Jimmy Salmon)
- Added particle system explosions (Jimmy Salmon)
- Increase the damage of nuke missiles (Francois Beerten)
- Abort with an error when using an unknown unittype in ai scripts (Francois Beerten)
- Fix bug with buildings under construction that could attack (Francois Beerten)
- Allow recycling of friendly and ennemy buildings (Francois Beerten)
- Replaced fire and explosion graphics (TimberDragon)
- Add "A Bridge Too Far" map (TimberDragon, Francois Beerten)
- Fix crash with non-square maps (Francois Beerten)
- Escape lua strings when saving (Jimmy Salmon)
- Added popups for button panel buttons (Jimmy Salmon)
- Morels and antharus are harvestable (Francois Beerten)
- Localized tips and keystroke help menus (Jimmy Salmon)
- Faster map drawing when using an image map (Jimmy Salmon)
- Convert some images to display format for faster drawing (Jimmy Salmon)

Version 2.4.1 (2007 9 2):
- Fixed load/save bug (Jimmy Salmon)
- Move to new map layout (Francois Beerten)
- Added Portuguese translation (Giovanni Oliveira)
- Made the language options menu more dynamic (Francois Beerten)
- Added the ability to change directories in the file browser (Jimmy Salmon)
- Using OpenGL is a run-time option (Jimmy Salmon)
- Fixed compilation on OS X (Francois Beerten)

Version 2.4.0 (2007 8 6):
- Fixed bug loading a save game where a unit contains a unit that hasn't been loaded yet (Jimmy Salmon)
- Add Czech translation (Radim Luža)